maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:63: error: too many arguments for method markAround: (x: Int, y: Int)Unit
				if (num != 9999) markAround(i,j,fini)
                                                           ^